[package]
name = "helios-client"
version = "0.1.0"
edition = "2021"

[dependencies]
graphql_client = "0.14" # Check for latest version
reqwest = { version = "0.12", features = ["json", "rustls-tls"] } # Or native-tls
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For the DSL (keeping existing logic mostly)
thiserror = "2.0" # For custom errors
async-stream = "0.3" # If you plan subscriptions later
tracing = "0.1" # Optional: for logging
